--- a/app/views/help_ja.scala.html
+++ b/app/views/help_ja.scala.html
@@ -12,6 +12,7 @@
 			<p><em>IE9以前、Android4.3以前の標準ブラウザでは動作しません。</em></p>
 		</article>
 	</section>
+
 	<section>
 		<h2 class="alert alert-info subhead">出題者の使い方の流れ</h2>
 		<article>
@@ -29,7 +30,8 @@
 		<article class="alert alert-warning">
 			<p>出題者と回答者が異なる場所にいてインターネット越しにクイズの出題／回答を行うこともできますが、このアプリの使い方としては実際に同じ部屋にいてパーティゲームの感覚で使う方が多分楽しいです。</p>
 		</article>
-	</secition>
+	</section>
+
 	<section>
 		<h2 class="alert alert-info subhead">回答者の使い方の流れ</h2>
 		<article>
@@ -44,12 +46,15 @@
 			<p>通信環境によっては端末によって出題されるタイミングがずれることがあります。その場合でも回答時間は問題が画面に表示されたタイミングからカウントされます。</p>
 			<p>問題出題時に端末がスリープしていたり、ブラウザを開いていなかったりした場合、その問題に回答することができませんが、それもゲームの一部としてお楽しみください。</p>
 		</article>
-	</secition>
+	</section>
+
 	<section>
 		<h2 class="alert alert-info subhead">画面構成</h2>
 		<article>
-			<img src="/assets/images/snapshot1_ja.png" style="width:220px;"/>
-			<img src="/assets/images/snapshot2_ja.png" style="width:220px;"/>
+			<div class="screen center">
+				<img src="/assets/images/snapshot1_ja.png" style="width:220px;"/>
+				<img src="/assets/images/snapshot2_ja.png" style="width:220px;"/>
+			</div>
 		</article>
 		<ol>
 			<li>メニューボタン。クリックするとサイドメニューが表示されます。</li>
@@ -57,7 +62,8 @@
 			<li>ユーザーメニュー。ログインすると表示されるユーザー関連のドロップダウンメニューです。</li>
 			<li>ショートカットバー。ルームに入室した際に表示される良く使う機能へのショートカットです。</li>
 		</ol>
-	</secition>
+	</section>
+
 	<section>
 		<h2 class="alert alert-info subhead">サインイン</h2>
 		<article>
@@ -78,7 +84,8 @@
 				<li>チャットでの発言を同時にTwitterにも流す(任意)</li>
 			</ul>
 		</article>
-	</secition>
+	</section>
+
 	<section>
 		<h2 class="alert alert-info subhead">ホーム</h2>
 		<article>
@@ -94,28 +101,28 @@
 			<p>各行をクリックすることでルームとイベントの詳細情報を確認できます。</p>
 			<p>入室ボタンをクリックすることでそのルームに入室することができます。</p>
 		</article>
-	</secition>
+	</section>
+
 	<section>
 		<h2 class="alert alert-info subhead">ルームの作成／編集</h2>
 		<article>
 			<p>サイドメニューの「ルームの作成」を選択することでルーム作成画面が表示されます。</p>
-		</article>
-		<dl>
-			<dt>ルーム名</dt>
-			<dd>ルームの名前を指定します。唯一の必須項目です。</dd>
-			<dt>参加者の問題投稿を許可</dt>
-			<dd>チェックすると自分以外のユーザーが問題を投稿できるようになります。</dd>
-			<dt>タグ</dt>
-			<dd>任意の文字列を設定できます。(現在未使用ですが将来的に検索できるようになるかもしれません。)</dd>
-			<dt>ハッシュタグ</dt>
-			<dd>チャットに付加されるハッシュタグを指定します。</dd>
-			<dt>説明</dt>
-			<dd>任意の説明を記述します。</dd>
-		</dl>
-		<article>
+			<dl>
+				<dt>ルーム名</dt>
+				<dd>ルームの名前を指定します。唯一の必須項目です。</dd>
+				<dt>参加者の問題投稿を許可</dt>
+				<dd>チェックすると自分以外のユーザーが問題を投稿できるようになります。</dd>
+				<dt>タグ</dt>
+				<dd>任意の文字列を設定できます。(現在未使用ですが将来的に検索できるようになるかもしれません。)</dd>
+				<dt>ハッシュタグ</dt>
+				<dd>チャットに付加されるハッシュタグを指定します。</dd>
+				<dt>説明</dt>
+				<dd>任意の説明を記述します。</dd>
+			</dl>
 			<p>ルームの設定内容はサイドメニューの「ルームの編集」からいつでも変更できます。</p>
 		</article>
-	</secition>
+	</section>
+
 	<section>
 		<h2 class="alert alert-info subhead">問題の作成</h2>
 		<article>
@@ -140,8 +147,6 @@
 				<dd>
 					<p>問題作成画面に遷移します。</p>
 				</dd>
-			</dl>
-			<dl>
 				<dt>問題</dt>
 				<dd>問題文を記述します。</dd>
 				<dt>選択肢</dt>
@@ -167,11 +172,9 @@
 				<dd>問題の解説として参考になるサイトがあるならそのURLを指定します。</dd>
 			</dl>
 		</article>
-
 		<article class="alert alert-warning">
 			<p>イベント参加者はマイページから自分の参加したイベントの問題を振り返ることができるので、勉強会目的の場合は説明、参考リンクを設定しておくことで学習の助けとなります。</p>
 		</article>
-
 		<dl>
 			<dt>問題の出題</dt>
 			<dd>イベント開催時にはこの画面から問題を出題することができます。</dd>
@@ -193,7 +196,7 @@
 				<p>主催者は投稿された問題を自由に修正することができます。</p>
 			</dd>
 		</dl>
-	</secition>
+	</section>
 	
 	<section>
 		<h2 class="alert alert-info subhead">イベントの編集</h2>
@@ -219,7 +222,6 @@
 			<dt>説明</dt>
 			<dd>任意の説明を記述します。</dd>
 		</dl>
-
 		<article class="alert alert-warning">
 			<ul>
 				<li>イベントの設定項目に必須項目はありません。この画面の表示後に何も入力せずにすぐにイベントを開始することができます。</li>
@@ -228,7 +230,7 @@
 				<li>過去のイベント情報の変更はできません。</li>
 			</ul>
 		</article>
-	</secition>
+	</section>
 
 	<section>
 		<h2 class="alert alert-info subhead">イベントへの参加</h2>
@@ -244,14 +246,16 @@
 				<li>イベントに参加していない状態でもルーム内にいれば問題を見ることはできますが回答はできません。</li>
 			</ul>
 		</article>
-	</secition>
+	</section>
+
 	<section>
 		<h2 class="alert alert-info subhead">問題の解答</h2>
 		<article>
 			<p>主催者が問題を出題するとすぐに参加者の端末で問題が表示されます。正解と思うボタンをクリックしてください。制限時間は10秒です。</p>
 			<p>解答後は選択肢ごとの人数がボタン上に表示され、10秒後には正解と問題の解説が表示されます。</p>
 		</article>
-	</secition>
+	</section>
+
 	<section>
 		<h2 class="alert alert-info subhead">ランキング</h2>
 		<article>
@@ -262,10 +266,8 @@
 					<p>現在開催中のイベントのランキング。一問毎に順位が入れ替わります。</p>
 					<p>(イベント開催中以外は表示されません。)</p>
 				</dd>
-
 				<dt>イベント別</dt>
 				<dd>過去のイベントの優勝者一覧。行をクリックすることでそのイベントのランキングが表示されます。</dd>
-
 				<dt>通算</dt>
 				<dd>イベントを通しての通算ランキング。行をクリックすることでその人の各イベントでの成績が表示されます。</dd>
 			</dl>
@@ -282,7 +284,8 @@
 				<li>ポイント、正答数が同じ場合は、正答した問題の解答にかかったタイムの短い順</li>
 			</ol>
 		</article>
-	</secition>
+	</section>
+
 	<section>
 		<h2 class="alert alert-info subhead">マイページ</h2>
 		<article>
@@ -312,7 +315,8 @@
 				</dd>
 			</dl>
 		</article>
-	</secition>
+	</section>
+
 	<section>
 		<h2 class="alert alert-info subhead">チャット</h2>
 		<article>
@@ -323,7 +327,8 @@
 			<p>チャットの内容はどこにも保存されておらず、画面をリロードするだけでも過去の発言は見えなくなります。</p>
 			<p>本格的なコミュニケーション手段というよりもTwitter感覚でお使いください。</p>
 		</article>
-	</secition>
+	</section>
+
 	<section>
 		<h2 class="alert alert-info subhead">ユーザー設定</h2>
 		<article>
@@ -335,5 +340,5 @@
 			<dt>チャットメッセージを通知する</dt>
 			<dd>チェックするとチャットに発言があった時にポップアップで通知されます。</dd>
 		</dl>
-	</secition>
+	</section>
 </div>
