--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -232,7 +232,7 @@ textarea.form-control   { height: auto; }
 .alert-success hr       { border-top-color: #c9e2b3; }
 .alert-success .alert-link { color: #2b542c; }
 .alert-info-headline    { background-color: #5bc0de; color: #fff; }
-.alert-info             { color: #03A4D4; background-color: #DCF6FD; }
+.alert-info             { color: #03A4D4; background-color: #BDEEFC; }
 .alert-info hr          { border-top-color: #a6e1ec; }
 .alert-info .alert-link { color: #245269; }
 .alert-warning          { background-color: #FFF1F1; }
@@ -310,6 +310,7 @@ textarea.form-control   { height: auto; }
 -----------------------------------------------------------------------------*/
 .btn-facebook           { color: #fff; background-color: #2980b9; }
 .btn-twitter            { margin-bottom: 20px; color: #fff; background-color: #55acee; }
+.help .btn-twitter      { margin: 5px 0; }
 .btn-block              { width: 100%; margin-top: 10px; }
 .btn-small              { width: 100px; }
 .btn-question:first-child { margin-top: 0; }
@@ -340,6 +341,8 @@ textarea.form-control   { height: auto; }
 .clearFix:after         { content: ""; display: block; overflow: hidden; }
 .clearFix:after         { clear: both; }
 .clearFix               { zoom: 1; }
+
+.center                 { text-align: center; }
 
 
 /* Components
@@ -439,14 +442,17 @@ tr.q-published td { color: #fff; background: #5bc0de !important; }
 
 .in-session             { color: #ff3c2d; }
 
-.help ol { list-style: decimal; margin: 10px 30px;}
-.help ul { list-style: disc; margin: 10px 0 10px 30px;}
+.help ol                { list-style: decimal; margin: 10px 40px;}
+.help ul                { list-style: disc; margin: 10px 0 10px 30px;}
 
-.help dl { margin: 10px 0; border-left: 1px solid #ccc; border-right: 1px solid #ccc; border-radius: 4px; }
-.help dt { padding: 5px 10px; border-top: 1px solid #ccc; font-weight: bold; background: #fafafa; }
-.help dd { padding: 5px 10px; border-top: 1px dotted #ccc; }
-.help dt:first-child { border-radius: 4px 4px 0 0; }
-.help dl dd:last-child { border-bottom: 1px solid #ccc; border-radius: 0 0 4px 4px; }
+.help dl                { margin: 10px 0; border-left: 1px solid #ccc; border-right: 1px solid #ccc; border-radius: 4px; }
+.help dt                { padding: 5px 10px; border-top: 1px solid #ccc; font-weight: bold; background: #fafafa; }
+.help dd                { padding: 5px 10px; border-top: 1px dotted #ccc; }
+.help dt:first-child    { border-radius: 4px 4px 0 0; }
+.help dl dd:last-child  { border-bottom: 1px solid #ccc; border-radius: 0 0 4px 4px; }
+
+.help .screen           { margin: 20px 0; }
+.help .screen img:nth-child(n+2) { margin-top: 20px; }
 
 
 /* jQuery UI
