--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -442,11 +442,11 @@ tr.q-published td { color: #fff; background: #5bc0de !important; }
 
 .in-session             { color: #ff3c2d; }
 
-.help ol                { list-style: decimal; margin: 10px 40px;}
+.help ol                { list-style: decimal; margin: 10px 0 10px 25px;}
 .help ul                { list-style: disc; margin: 10px 0 10px 30px;}
 
 .help dl                { margin: 10px 0; border-left: 1px solid #ccc; border-right: 1px solid #ccc; border-radius: 4px; }
-.help dt                { padding: 5px 10px; border-top: 1px solid #ccc; font-weight: bold; background: #fafafa; }
+.help dt                { padding: 5px 10px; border-top: 1px solid #ccc; font-weight: bold; background: #eee; }
 .help dd                { padding: 5px 10px; border-top: 1px dotted #ccc; }
 .help dt:first-child    { border-radius: 4px 4px 0 0; }
 .help dl dd:last-child  { border-bottom: 1px solid #ccc; border-radius: 0 0 4px 4px; }
