--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -451,8 +451,7 @@ tr.q-published td { color: #fff; background: #5bc0de !important; }
 .help dt:first-child    { border-radius: 4px 4px 0 0; }
 .help dl dd:last-child  { border-bottom: 1px solid #ccc; border-radius: 0 0 4px 4px; }
 
-.help .screen           { margin: 20px 0; }
-.help .screen img:nth-child(n+2) { margin-top: 20px; }
+.help .screen div       { margin: 10px 0; padding: 10px; border-radius: 4px; background-color: #E4E2E2; }
 
 
 /* jQuery UI
