--- a/app/views/help_ja.scala.html
+++ b/app/views/help_ja.scala.html
@@ -50,9 +50,11 @@
 
 	<section>
 		<h2 class="alert alert-info subhead">画面構成</h2>
-		<article>
-			<div class="screen center">
+		<article class="screen center">
+			<div>
 				<img src="/assets/images/snapshot1_ja.png" style="width:220px;"/>
+			</div>
+			<div>
 				<img src="/assets/images/snapshot2_ja.png" style="width:220px;"/>
 			</div>
 		</article>
