--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -235,7 +235,7 @@ textarea.form-control   { height: auto; }
 .alert-info             { color: #03A4D4; background-color: #BDEEFC; }
 .alert-info hr          { border-top-color: #a6e1ec; }
 .alert-info .alert-link { color: #245269; }
-.alert-warning          { background-color: #FFF1F1; }
+.alert-warning          { background-color: #FFE9E9; }
 .alert-warning hr       { border-top-color: #f7e1b5; }
 .alert-warning .alert-link { color: #66512c; }
 .alert-danger           { border-color: #ebccd1; color: #a94442; background-color: #FFF1F1; }
@@ -451,7 +451,7 @@ tr.q-published td { color: #fff; background: #5bc0de !important; }
 .help dt:first-child    { border-radius: 4px 4px 0 0; }
 .help dl dd:last-child  { border-bottom: 1px solid #ccc; border-radius: 0 0 4px 4px; }
 
-.help .screen div       { margin: 10px 0; padding: 10px; border-radius: 4px; background-color: #E4E2E2; }
+.help .screen div       { margin: 10px 0; padding: 10px; border-radius: 4px; background-color: #ddd; }
 
 
 /* jQuery UI
