--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -388,7 +388,7 @@ textarea.form-control   { height: auto; }
 #msg-dialog .tweet      { margin-top: 5px; }
 #msg-dialog .tweet img  { float: left; margin: 5px; }
 #msg-dialog .tweet p    { margin: 2px 10px; }
-#effect-dialog          { position: fixed; left: 50%; top: 30%; width: 280px; min-height: 50px; margin-left: -140px; border: double 3px #000; border-radius: 4px; color: #fff; font-size: 24px; font-weight: bold; background-color: #5bc0de; }
+#effect-dialog          { position: fixed; left: 50%; top: 30%; width: 280px; min-height: 50px; margin-left: -140px; border: double 3px #000; border-radius: 4px; color: #fff; font-size: 24px; font-weight: bold; background-color: #F5B02E; }
 #effect-dialog .message { display: block; margin: 10px auto; text-align: center; }
 
 td.chat-img             { width: 28px; }
