Change default withTwitter checked to false

--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -19,7 +19,7 @@
                     <ul>
     				    <li class="checkbox align-left">
         				    <label class="btn">
-        						<input id="chat-twitter" type="checkbox" checked="checked">
+        						<input id="chat-twitter" type="checkbox" >
         						@Messages("postTwitter")
         					</label>
     				    </li>
