--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -363,7 +363,7 @@ textarea.form-control   { height: auto; }
 */
 .toolbar button         { margin: 8px 10px; padding: 9px 10px; border: 1px solid #ddd; border-radius: 4px; background: transparent; }
 .toolbar-content        { margin-right: auto; margin-left: auto; }
-.toolbar-title          { padding-top: 10px; font-size: 18px; font-weight: bold; }
+.toolbar-title          { padding-top: 10px; font-size: 18px; font-weight: bold; width: 330px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap;}
 .toolbar-content div    { display: inline-block; }
 
 .tabbar                 { position: fixed; bottom: 0; left: 0; width: 100%; height: 49px; background: #f5f5f5; border: 1px solid #ccc; }
@@ -471,12 +471,15 @@ tr.q-published td { color: #fff; background: #5bc0de !important; }
 -----------------------------------------------------------------------------*/
 @media (min-width: 768px) {
   .container            { width: 750px; }
+  .toolbar-title        { width: 600px;}
 }
 @media (min-width: 992px) {
   .container            { width: 970px; }
+  .toolbar-title        { width: 820px;}
 }
 @media (min-width: 1200px) {
   .container            { width: 1170px; }
+  .toolbar-title        { width: 1020px;}
 }
 
 .publish-q-animation {
