--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -363,7 +363,7 @@ textarea.form-control   { height: auto; }
 */
 .toolbar button         { margin: 8px 10px; padding: 9px 10px; border: 1px solid #ddd; border-radius: 4px; background: transparent; }
 .toolbar-content        { margin-right: auto; margin-left: auto; }
-.toolbar-title          { padding-top: 10px; font-size: 18px; font-weight: bold; width: 330px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap;}
+.toolbar-title          { padding-top: 10px; font-size: 18px; font-weight: bold; width: 240px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap;}
 .toolbar-content div    { display: inline-block; }
 
 .tabbar                 { position: fixed; bottom: 0; left: 0; width: 100%; height: 49px; background: #f5f5f5; border: 1px solid #ccc; }
@@ -469,6 +469,9 @@ tr.q-published td { color: #fff; background: #5bc0de !important; }
 
 /* Media Queries
 -----------------------------------------------------------------------------*/
+@media (min-width: 480px) {
+  .toolbar-title        { width: 360px;}
+}
 @media (min-width: 768px) {
   .container            { width: 750px; }
   .toolbar-title        { width: 600px;}
