--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -470,6 +470,9 @@ tr.q-published td { color: #fff; background: #5bc0de !important; }
 /* Media Queries
 -----------------------------------------------------------------------------*/
 @media (min-width: 480px) {
+  .toolbar-title        { width: 220px;}
+}
+@media (min-width: 480px) {
   .toolbar-title        { width: 340px;}
 }
 @media (min-width: 768px) {
