--- a/app/views/event.scala.html
+++ b/app/views/event.scala.html
@@ -10,6 +10,8 @@
 				<select id="event-capacity" class="form-control auto-collect">
 					<option value="20">20 @Messages("ui.people")</option>
 					<option value="50">50 @Messages("ui.people")</option>
+					<option value="100">100 @Messages("ui.people")</option>
+					<option value="200">200 @Messages("ui.people")</option>
 				</select>
 			</div>
 			<div class="form-group">
